--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,5 @@ lib_deps =
 	vshymanskyy/TinyGSM@^0.11.5
 	sandeepmistry/LoRa@^0.8.0
 	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	mikalhart/TinyGPSPlus@^1.0.3
 monitor_speed = 115200
