--- a/platformio.ini
+++ b/platformio.ini
@@ -16,5 +16,5 @@ lib_deps =
 	bblanchon/ArduinoJson@^6.21.0
 	vshymanskyy/TinyGSM@^0.11.5
 	sandeepmistry/LoRa@^0.8.0
-	marcoschwartz/LiquidCrystal_I2C@^1.1.4
+	mikalhart/TinyGPSPlus@^1.0.3
 monitor_speed = 115200
