--- a/platformio.ini
+++ b/platformio.ini
@@ -17,4 +17,7 @@ lib_deps =
 	vshymanskyy/TinyGSM@^0.11.5
 	sandeepmistry/LoRa@^0.8.0
 	mikalhart/TinyGPSPlus@^1.0.3
-monitor_speed = 115200
+	paulstoffregen/Time@^1.6.1
+	pedroalbuquerque/ESP32WebServer@^1.0
+	suculent/ESP32httpUpdate@^2.1.145
+monitor_speed = 9600
